--- a/Mod2-solution/css/style.css
+++ b/Mod2-solution/css/style.css
@@ -124,7 +124,7 @@ text-align: center;
   font-family: 'Bangers', cursive;
 font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif;
-  text-align: right;
+  text-align: 
   display: flex;
   float: right;
 }
