--- a/Mod2-solution/css/style.css
+++ b/Mod2-solution/css/style.css
@@ -120,11 +120,11 @@ text-align: center;
   width: 20%;
   height: 30px;
   position: relative;
-  
+  right:0px;
   font-family: 'Bangers', cursive;
 font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif;
-  
+  text-align:right;
   display: flex;
   float: right;
 }
